--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 
   <div class="container">
     <div class="hex-colors">
-      <h1>Click the button bellow to display the hex color code of a random color</h1>
       <h2>The hex code of the color is #<span id="hex-code">FFFFFF</span></h2>
-      <button onclick="changeColor()" class="btn btn-primary">Change</button>
+      <button id="button" onclick="changeColor()" class="btn btn-primary">Change</button>
     </div>
   </div>
 
